# trabalho_poo

./: CMakeLists.txt  list.cpp  list.h  main.cpp  nodelist.cpp  nodelist.h  pessoa.cpp  pessoa.h
headers/: aluno.h  curso.h  disciplina.h  funcionario.h  list.h  pessoa.h  setor.h  turma.h  universidade.h
sources/: aluno.cpp  curso.cpp  disciplina.cpp  funcionario.cpp  list.cpp  nodelist.cpp  pessoa.cpp  setor.cpp  turma.cpp  universidade.cpp
